--- a/be-bds/.env
+++ b/be-bds/.env
@@ -1,3 +1,3 @@
-DB_HOST=192.168.1.211
-DB_USER=phuc.do
-DB_PASSWORD=Gss@20220620
+DB_HOST=<YOUR_PORT>
+DB_USER=<YOUR_USERDB>
+DB_PASSWORD=<YOUR_PASSDB>
